little bit fixes

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="hotel,israel hotel,haifa hotel">
   <script src="https://kit.fontawesome.com/81b6380001.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 768px)">
   <title>Hotel BS | Contant</title>
 </head>
 <body>
