--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Welcometo the most extraordinary hotek in Haifa Israel">
   <meta name="keywords" content="hotel,israel hotel,haifa hotel">
   <script src="https://kit.fontawesome.com/81b6380001.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 768px)">
   <title>Hotel BS | Welcome</title>
 </head>
 <body>
