--- a/about.html
+++ b/about.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welcometo the most extraordinary hotel in Haifa Israel">
   <meta name="keywords" content="hotel,israel hotel,haifa hotel">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 768px)">
   <title>Hotel BS | About</title>
 </head>
 <body>
